tests/baselines/reference/collisionExportsRequireAndAmbientModule.errors.txt
collisionExportsRequireAndAmbientModule_externalmodule.ts(33,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
collisionExportsRequireAndAmbientModule_globalFile.ts(27,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionExportsRequireAndAmbientModule_externalmodule.ts (1 errors) ====
    export declare module require {
        export interface I {
        }
        export class C {
        }
    }
    export function foo(): require.I {
        return null;
    }
    export declare module exports {
        export interface I {
        }
        export class C {
        }
    }
    export function foo2(): exports.I {
        return null;
    }
    declare module m1 {
        module require {
            export interface I {
            }
            export class C {
            }
        }
        module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare module require {
            export interface I {
            }
            export class C {
            }
        }
        export declare module exports {
            export interface I {
            }
            export class C {
            }
        }
        var a = 10;
    }
    
==== collisionExportsRequireAndAmbientModule_globalFile.ts (1 errors) ====
    declare module require {
        export interface I {
        }
        export class C {
        }
    }
    declare module exports {
        export interface I {
        }
        export class C {
        }
    }
    declare module m3 {
        module require {
            export interface I {
            }
            export class C {
            }
        }
        module exports {
            export interface I {
            }
            export class C {
            }
        }
    }
    module m4 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare module require {
            export interface I {
            }
            export class C {
            }
        }
        export declare module exports {
            export interface I {
            }
            export class C {
            }
        }
    
        var a = 10;
    }
    